Eliminant Warnings, per fi sembla un codi meu